@@ -8,6 +8,7 @@
 * Fix - Label improvements on subscription and order page templates.
 * Fix - Fixed an issue with subscriptions containing multiple renewal orders to mark a random item as processing, instead of the last order.
 * Fix - Prevent errors from invalid subscription objects during customer payment method updates.
+* Fix - Resolved an error when purchasing subscription products on the block checkout with a limited recurring coupon.
 
 = 7.2.0 - 2024-06-13 =
 * Fix - label improvement on my subscription page template.
